[package]
name = "rsjson"
version = "0.1.0"
edition = "2024"
description = "A zero dependency JSON parser in Rust."
license = "MIT"
repository = "https://github.com/prudhvideep/rsjson"
keywords = ["json", "parser", "serialization"]
categories = ["parser-implementations", "encoding"]

[dependencies]
